--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <!-- banner section -->
-    <header class="banner">
-
+    
+<header class="banner">
         <div>
             <!-- <div class="text-decoration"> -->
                 <h2 class="banner-title">All Thinks Are
@@ -31,7 +31,35 @@
             <button class="banner-btn">Contact Us</button>
             <img src="images/banner/banner1.png" alt=" new idea" width="100%">
         </div>
-    </header>
+    
+</header>
+<main>
+    <!--failor section -->
+    <section class="section-container">
+        <div class="image">
+            <img src="images/person.png" alt="person">
+        </div>
+
+        <div class="text">
+            <h3 class="text-title">My failures of previous year</h3>
+            <p class="text-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <div class="text-list">
+            <ul>
+                <li class="list">Contrary to popular belief, is not simply.</li>
+                <li class="list">Contrary to popular belief, is not simply.</li>
+                <li class="list">Contrary to popular belief, is not simply.</li>
+                <li class="list">Contrary to popular belief, is not simply.</li>
+                <li class="list">Contrary to popular belief, is not simply.</li>
+            </ul>
+
+            </div>
+
+        </div>
+
+    </section>
+</main>
+
+
 
 </body>
 
