--- a/index.html
+++ b/index.html
@@ -51,12 +51,35 @@
                 <li class="list">Contrary to popular belief, is not simply.</li>
                 <li class="list">Contrary to popular belief, is not simply.</li>
             </ul>
-
             </div>
-
         </div>
-
     </section>
+<!-- plan section -->
+<section>
+<h3>My Plans</h3>
+<div class="plan-container">
+    <div class="plan">
+        <img class="ilan-img" src="images/icons/web.png" alt="web pic">
+        <p class="plan-title">Web Development</p>
+        <p class="plan-description">Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="plan">
+        <img class="plan-img" src="images/icons/js.png" alt=" js pic">
+        <p class="plan-title">Javascript</p>
+        <p class="plan-description">Quisquam rerum in eveniet voluptatem.</p>
+    </div>
+    <div class="plan">
+        <img class="plan-img" src="images/icons/smoke.png" alt=" smoking pic">
+        <p class="plan-title">Smoking Habit</p>
+        <p class="plan-description">Nemo possimus eaque iste? Quisquam.</p>
+    </div>
+    <div class class="plan">
+    <img class="plan-img"  src="images/icons/ecom.png" alt="">
+        <p class="plan-title">ecommerce</p>
+        <p class="plan-description">Voluptatum harum debitis quis ducimus!</p>
+    </div>
+</div>
+</section>
 </main>
 
 
