added gradient without pic

--- a/index.html
+++ b/index.html
@@ -81,9 +81,16 @@
 </div>
 </section>
 </main>
+<!-- gradient section -->
+<section class="gradient">
+   
+    
+    <div id="grad1">
+<h3 class="grad-title">Awlays keep a positive mindset</h3>
+<button class="gradient-btn">call now</button>
+    </div>
 
-
-
+</section>
 </body>
 
 </html>
