--- a/index.html
+++ b/index.html
@@ -7,32 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Plan</title>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet"> -->
 
 </head>
 
 <body>
     <!-- banner section -->
 
-    <header class="banner">
+    <div class="banner">
         <div>
-            <!-- <div class="text-decoration"> -->
+
+            <img src="images/banner/banner1.png" alt=" new idea"width: 100%;>
+           
+        </div>
+
+        <div>
+
             <h2 class="banner-title">All Thinks Are
                 Possible If You
                 believe</h2>
             <p class="banner-description">
-            <h4>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour, or randomised words</h4>
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour, or randomised words
             </p>
-            <!-- </div>*/ -->
-
             <button class="banner-btn">Contact Us</button>
-            <img src="images/banner/banner1.png" alt=" new idea" width="100%">
-        </div>
 
-    </header>
+        </div>
+        
+
+    </div>
+
+    </div>
     <main>
         <!--failor section -->
         <section class="section-container">
@@ -61,24 +68,24 @@
             <h3>My Plans</h3>
             <div class="plan-container">
                 <div class="plan">
-                    <img class="ilan-img" src="images/icons/web.png" alt="web pic">
+                    <img class="plan-img" src="images/icons/web.png" alt="web pic">
                     <p class="plan-title">Web Development</p>
-                    <p class="plan-description">Lorem ipsum dolor sit amet.</p>
+                    <p class="plan-description">I want to start</p>
                 </div>
                 <div class="plan">
                     <img class="plan-img" src="images/icons/js.png" alt=" js pic">
                     <p class="plan-title">Javascript</p>
-                    <p class="plan-description">Quisquam rerum in eveniet voluptatem.</p>
+                    <p class="plan-description">I want to learn</p>
                 </div>
                 <div class="plan">
                     <img class="plan-img" src="images/icons/smoke.png" alt=" smoking pic">
                     <p class="plan-title">Smoking Habit</p>
-                    <p class="plan-description">Nemo possimus eaque iste? Quisquam.</p>
+                    <p class="plan-description">I want to end</p>
                 </div>
                 <div class class="plan">
-                    <img class="plan-img" src="images/icons/ecom.png" alt="">
-                    <p class="plan-title">ecommerce</p>
-                    <p class="plan-description">Voluptatum harum debitis quis ducimus!</p>
+                    <img class="plan-img" src="images/icons/ecom.png" alt=" e-commerce">
+                    <p class="plan-title">e-commerce</p>
+                    <p class="plan-description">I want to develop</p>
                 </div>
             </div>
         </section>
@@ -95,24 +102,33 @@
     </section>
     <!-- footer section -->
     <footer>
-        <section class="footer-container">
+        <section class="content">
 
-            <div class="footer-text">
-                <h2 class="footer-title">Future</h2>
-                <form class="footer-description" action="">There are many variations of passages of Lorem Ipsum
+            <div>
+                <h3 class="section-title">Future</h3>
+                <p>There are many variations of passages of Lorem Ipsum
                     available, but the majority have suffered alteration in some form, by injected humour, or randomised
-                    words</form>
+                    words</p>
+                <a href="">
+                    <img src="images/icons/fb.png" alt="facebook logo">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="twitter logo">
+                </a>
+                <a href="">
+                    <img src="images/icons/youtube.png" alt="youtuibe logo">
+                </a>
+
+
                 <h4 class="footer-description">info@gmail.com</h4>
                 <h4 class="footer-description">12345678900</h4>
-                <img class="logo" src="images/icons/fb.png" alt="facebook logo">
-                <img class="logo" src="images/icons/twitter.png" alt="twitter logo">
-                <img class="logo" src="images/icons/youtube.png" alt="youtube logo">
+
 
 
             </div>
             <div class="form">
                 <h4 class="form-text">Subscribe</h4>
-                <input class="mail" type="email" name="email" id="" placeholder= "enter tour email">
+                <input class="mail" type="email" name="email" id="" placeholder="enter tour email">
                 <button class="form-btn">Subscribe</button>
             </div>
 
