--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="banner">
         <div>
 
-            <img src="images/banner/banner1.png" alt=" new idea"width: 100%;>
-           
+            <img src="images/banner/banner1.png" alt=" new idea" width:100%>
+
         </div>
 
         <div>
@@ -35,34 +35,38 @@
             <button class="banner-btn">Contact Us</button>
 
         </div>
-        
+
 
     </div>
 
     </div>
     <main>
-        <!--failor section -->
-        <section class="section-container">
-            <div class="image">
-                <img src="images/person.png" alt="person">
-            </div>
-
-            <div class="text">
-                <h3 class="text-title">My failures of previous year</h3>
-                <p class="text-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                    roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
-                    McClintock.</p>
-                <div class="text-list">
-                    <ul>
-                        <li class="list">Contrary to popular belief, is not simply.</li>
-                        <li class="list">Contrary to popular belief, is not simply.</li>
-                        <li class="list">Contrary to popular belief, is not simply.</li>
-                        <li class="list">Contrary to popular belief, is not simply.</li>
-                        <li class="list">Contrary to popular belief, is not simply.</li>
-                    </ul>
+        <div>
+            <!--failor section -->
+            <section class="section-container">
+                <div class="image">
+                    <img src="images/person.png" alt="person">
                 </div>
-            </div>
-        </section>
+
+                <div class="text">
+                    <h3 class="text-title">My failures of previous year</h3>
+                    <p class="text-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                        has
+                        roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        Richard
+                        McClintock.</p>
+                    <div class="text-list">
+                        <ul>
+                            <li class="list">Contrary to popular belief, is not simply.</li>
+                            <li class="list">Contrary to popular belief, is not simply.</li>
+                            <li class="list">Contrary to popular belief, is not simply.</li>
+                            <li class="list">Contrary to popular belief, is not simply.</li>
+                            <li class="list">Contrary to popular belief, is not simply.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        </div>
         <!-- plan section -->
         <section>
             <h3>My Plans</h3>
