--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Plan</title>
     <link rel="stylesheet" href="style/style.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
 
 </head>
 
@@ -105,41 +105,44 @@
 
     </section>
     <!-- footer section -->
-    <footer>
-        <section class="content">
-
-            <div>
-                <h3 class="section-title">Future</h3>
-                <p>There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
-                    words</p>
-                <a href="">
-                    <img src="images/icons/fb.png" alt="facebook logo">
-                </a>
-                <a href="">
-                    <img src="images/icons/twitter.png" alt="twitter logo">
-                </a>
-                <a href="">
-                    <img src="images/icons/youtube.png" alt="youtuibe logo">
-                </a>
+    <footer class="content">
 
 
-                <h4 class="footer-description">info@gmail.com</h4>
-                <h4 class="footer-description">12345678900</h4>
+        <div>
+            <p >
+            <h3 class="section-title" >Future</h3>
+            There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                words.
+                <h4>Email:info@gmail.com</h4>
+                <h4>Phone:12345678900</h4>
+            </p>
+                
+            <a href="">
+                <img src="images/icons/fb.png" alt="facebook logo">
+            </a>
+            <a href="">
+                <img src="images/icons/twitter.png" alt="twitter logo">
+            </a>
+            <a href="">
+                <img src="images/icons/youtube.png" alt="youtuibe logo">
+            </a>
+        </div>
+        <div class="section-title">
+            <h4 class="form-text">Subscribe</h4><br>
+
+            <form action="">
+            <input type="email" name="" id="" placeholder="Enter your Email">
+            <button class="form-btn">Subscribe</button>
+        </form>
+        </div>
 
 
 
-            </div>
-            <div class="form">
-                <h4 class="form-text">Subscribe</h4>
-                <input class="mail" type="email" name="email" id="" placeholder="enter tour email">
-                <button class="form-btn">Subscribe</button>
-            </div>
 
-        </section>
+     </footer>
 
-
-    </footer>
+    
 
 </body>
 
