--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                         has
                         roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
                         Richard
-                        McClintock.</p>
+                        McClinton.</p>
                     <div class="text-list">
                         <ul>
                             <li class="list">Contrary to popular belief, is not simply.</li>
-                            <li class="list">Contrary to popular belief, is not simply.</li>
+                            <li class="list">Contrary to popular belief.</li>
                             <li class="list">Contrary to popular belief, is not simply.</li>
                             <li class="list">Contrary to popular belief, is not simply.</li>
                             <li class="list">Contrary to popular belief, is not simply.</li>
@@ -104,6 +104,23 @@
         </div>
 
     </section>
+<!-- comment section -->
+<section class="comment">
+<div>
+    <h3 class="section-title">Write Your Valuable comment Here
+
+        <form action="">
+   
+            <textarea  name="" id="" cols="30" rows="10"> Write comment      
+            </textarea>
+        <input class="banner-btn" type="button" value="Reset" placeholder="Reset">
+        <input class="banner-btn" type="button" value="submit" placeholder="submit">
+        </form>
+
+    </h3>
+
+</div>
+</section>
     <!-- footer section -->
     <footer class="content">
 
